--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -10,6 +10,9 @@ scopes = {
 	"last_search.785D90A9" = "navi"
 	"InspectorPreview.785D90A9" = "0"
 	"currentGroup.785D90A9" = "all"
+	"last_search.7F95D817" = "input"
+	"InspectorPreview.7F95D817" = "0"
+	"currentGroup.7F95D817" = "all"
 }
 providers = {
 	asset = {
